--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5; url=https://ghost143.de">
+    <meta http-equiv="refresh" content="5; url=https://google.de">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weiterleitung</title>
     <style>
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Sie werden weitergeleitet...</h1>
         <p>Falls die Weiterleitung nicht automatisch erfolgt, klicken Sie auf den unten stehenden Link.</p>
-        <a href="https://ghost143.de">Weiterleitung...</a>
+        <a href="https://google.de">Weiterleitung...</a>
     </div>
 </body>
 </html>
