--- a/kylobild.html
+++ b/kylobild.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Sie werden weitergeleitet...</h1>
         <p>Falls die Weiterleitung nicht automatisch erfolgt, klicken Sie auf den unten stehenden Link.</p>
-        <a href="https://https://www.gutefrage.net/a/frage/wie-fuehlt-es-sich-an-von-maennlichen-sperma-angespritzt-zu-werden">Weiterleitung...</a>
+        <a href="https://www.gutefrage.net/a/frage/wie-fuehlt-es-sich-an-von-maennlichen-sperma-angespritzt-zu-werden">Klicke sie hier um zugreifen. </a>
     </div>
 </body>
 </html>
